# wolia

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_REPORT.md  LICENSE  PHASE_1_ASSETS_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_WRITE_PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  pages.yml  release.yml  security.yml
apps/wolia-deck/: Cargo.toml
apps/wolia-deck/src/: app.rs  main.rs  slides.rs  timeline.rs  transitions.rs
apps/wolia-deck/src/ui/: mod.rs  presenter.rs  slide_editor.rs  slide_panel.rs  toolbar.rs
apps/wolia-grid/: Cargo.toml
apps/wolia-grid/src/: app.rs  editor.rs  formulas.rs  main.rs  sheet.rs
apps/wolia-grid/src/ui/: cell_editor.rs  mod.rs  sheet_view.rs  toolbar.rs
apps/wolia-write/: Cargo.toml  wolia-write.desktop
apps/wolia-write/src/: app.rs  automation.rs  main.rs  sidebar.rs  statusbar.rs  toolbar.rs  workspace.rs
apps/wolia-write/src/editor/: mod.rs  view.rs
apps/wolia-write/src/ui/: menu.rs  mod.rs  status_bar.rs  theme.rs
benchmarks/: Cargo.toml
benchmarks/benches/: layout.rs  parsing.rs
benchmarks/src/: lib.rs
docs/: architecture.md  engine.md  file-formats.md  lucide-icons.md  plugin-api.md  roadmap.md
engine-modules/deck-engine/: Cargo.toml
engine-modules/deck-engine/src/: animation.rs  lib.rs  presentation.rs  shape.rs  slide.rs
engine-modules/grid-engine/: Cargo.toml
engine-modules/grid-engine/src/: cell.rs  evaluator.rs  formula.rs  lib.rs  selection.rs  sheet.rs  spreadsheet.rs  view.rs
engine/assets/: Cargo.toml
engine/assets/icons/: README.md
engine/assets/src/: cache.rs  fonts.rs  icons.rs  images.rs  lib.rs  pipeline.rs
engine/core/: Cargo.toml
engine/core/src/: content.rs  document.rs  lib.rs  node.rs  style.rs  text.rs
engine/edit/: Cargo.toml
engine/edit/src/: clipboard.rs  cursor.rs  document.rs  editor.rs  format.rs  history.rs  ime.rs  input.rs  lib.rs  operation.rs  paragraph.rs
engine/format/: Cargo.toml
engine/format/src/: detect.rs  lib.rs  native.rs
engine/layout/: Cargo.toml
engine/layout/src/: lib.rs  line.rs  page.rs  paragraph.rs  text.rs  tree.rs
engine/math/: Cargo.toml
engine/math/src/: lib.rs  rect.rs  size.rs  transform.rs
engine/platform/: Cargo.toml
engine/platform/src/: event.rs  lib.rs  window.rs
engine/plugin/: Cargo.toml
engine/plugin/src/: api.rs  lib.rs  loader.rs  manifest.rs
engine/render/: Cargo.toml
engine/render/src/: context.rs  icon.rs  icon.wgsl  lib.rs  pipeline.rs  quad.rs  quad.wgsl  text.rs  texture.rs  ui.rs
formats/docx/: Cargo.toml
formats/docx/src/: lib.rs
formats/markdown/: Cargo.toml
formats/markdown/src/: lib.rs
formats/pdf/: Cargo.toml
formats/pdf/src/: error.rs  generator.rs  lib.rs
formats/pptx/: Cargo.toml
formats/pptx/src/: lib.rs
formats/wolia-format/: Cargo.toml
formats/wolia-format/src/: lib.rs
formats/xlsx/: Cargo.toml
formats/xlsx/src/: lib.rs
packaging/linux/: README.md  install.sh  wolia-deck.desktop  wolia-grid.desktop  wolia-write.desktop
packaging/macos/: README.md
packaging/windows/: README.md
plugins/code-blocks/: Cargo.toml
plugins/code-blocks/src/: lib.rs
plugins/diagrams/: Cargo.toml
plugins/diagrams/src/: lib.rs
plugins/latex/: Cargo.toml
plugins/latex/src/: lib.rs
test-suite/: README.md
test-suite/documents/: simple.wolia.json
test-suite/layouts/: .gitkeep
test-suite/rendering/: .gitkeep
tooling/asset-pipeline/: Cargo.toml
tooling/asset-pipeline/src/: lib.rs
tooling/font-processor/: Cargo.toml
tooling/font-processor/src/: lib.rs
tooling/fuzzers/: Cargo.toml
tooling/fuzzers/src/: lib.rs
tooling/test-generator/: Cargo.toml
tooling/test-generator/src/: lib.rs
