[package]
name = "wolia-benchmarks"
description = "Performance benchmarks for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }
wolia-layout = { workspace = true }
wolia-render = { workspace = true }

criterion = { workspace = true }

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "parsing"
harness = false
