[package]
name = "wolia-layout"
description = "Layout and pagination engine for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }
wolia-math = { workspace = true }

smallvec = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
