[package]
name = "wolia-math"
description = "Math and geometry utilities for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
glam = { workspace = true }
serde = { workspace = true }
