[package]
name = "wolia-platform"
description = "Platform abstraction layer for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-math = { workspace = true }

winit = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
