[package]
name = "format-pptx"
description = "Microsoft PowerPoint (.pptx) format support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }
deck-engine = { workspace = true }

quick-xml = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
