[package]
name = "format-wolia"
description = "Native .wolia file format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
zstd = { workspace = true }
thiserror = { workspace = true }
