[package]
name = "wolia-fuzzers"
description = "Fuzz testing for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }
wolia-format = { workspace = true }
