[package]
name = "test-generator"
description = "Test document generator for Wolia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
wolia-core = { workspace = true }

thiserror = { workspace = true }
